force-app/main/default/objects/User/fields/Last_Assigned_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_DateTime__c</fullName>
    <description>BR-09/PD-07. Round-robin rotation state. Readable, not inferred - this is what makes distribution verifiable.</description>
    <inlineHelpText>When this user last received a routed record.</inlineHelpText>
    <label>Last Assigned</label>
    <type>DateTime</type>
</CustomField>