force-app/main/default/objects/User/fields/Routing_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Routing_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BR-08/OD-02. Eligible to receive routed records. IsActive covers inactive users; this covers active-but-unavailable.</description>
    <inlineHelpText>Uncheck to exclude this user from routing without deactivating them.</inlineHelpText>
    <label>Routing Eligible</label>
    <type>Checkbox</type>
</CustomField>