force-app/main/default/objects/User/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>BR-06/BR-07. Territory coverage for routing. Deliberately separate from the role hierarchy: visibility and routing classification are different concerns.</description>
    <inlineHelpText>Which territory this user covers for routing.</inlineHelpText>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NIQ_Territory</valueSetName>
    </valueSet>
</CustomField>